# sidebar-max-chrome

./: .gitignore  LICENSE  README.md  SIDEPANEL_MACOS_APP_SPECIFICATION.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.app.config.ts  vitest.config.ts  wxt.config.ts
entrypoints/: background.ts  dock.content.tsx  viewport.content.ts
entrypoints/sidepanel/: main.tsx
public/: offscreen.html  offscreen.js  rules.json
src-app/: index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/background/: controller.ts
src/components/: DockRoot.tsx  SidePanel.tsx  icons.tsx
src/lib/: constants.ts  dom-layout.ts  embed.ts  schema.ts  storage.ts  url.ts  workspace.ts
src/styles/: dock.css  sidepanel.css
tests/: embed.test.ts  url.test.ts  workspace.test.ts
tests/e2e/: dock.spec.ts
